<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">tagAR</string>
    <string name="mnTechLogo">MN Tech Solutions</string>
    <string name="mustafaNeguibLogo">Mustafa Neguib</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="empty"></string>
	<string name="login">Login</string>
	<string name="registerLink"><u>Don\'t have an account? Register now!!!</u></string>
	<string name="registration">Registration</string>
	<string name="firstName">First Name:</string>
	<string name="lastName">Last Name:</string>
	<string name="register">Register</string>
	<string name="menu">Menu</string>
	<string name="tagLocation">Tag Location</string>
	<string name="viewYourTags">View Your Tags</string>
	<string name="comment">Comment:</string>
	<string name="submit">Submit</string>
	<string name="cancel">Cancel</string>
	<string name="exit">Exit(Logout)</string>
	<string name="userDoesNotExist">No user exists for the given login details. Please make sure that the details are correct or register a new acccount.</string>
	<string name="about">About</string>
	<string name="copyright1">COPYRIGHT 2008&#8211;2012 MN Tech Solutions</string>
	<string name="copyright2">COPYRIGHT 2008&#8211;2012 Mustafa Neguib</string>
	<string name="company">Software Company: MN Tech Solutions</string>
	<string name="designerDeveloper">Designer &amp; Developer: Mustafa Neguib</string>
	<string name="website">Website: tagar.mntechsolutions.net</string>
	<string name="close">Close</string>
	<string name="location">Location:</string>
	<string name="distance">Distance:</string>
	<string name="appVersion">Version: 2.1</string>
	<string name="loginLink"><u>Already have an account? Login now!!!</u></string>
	<string name="forgotPasswordLink"><u>Forgotten your password? Reset it!!!</u></string>
	<string name="forgotPassword">Reset Password</string>
	<string name="newPassword">New Password:</string>
	<string name="settings">Settings</string>
	<string name="presentPassword">Present Password:</string>
	<string name="tagARLogo">tagAR Logo</string>
	<string name="latitudeYour">Your Latitude:</string>
	<string name="longitudeYour">Your Longitude:</string>
	<string name="locationYour">Your Location:</string>
	<string name="accuracyYour">Accuracy:</string>
	<string name="license">License: GNU GPL Version 3</string>
	<string name="website1">Project Code: github.com/mustafaneguib/tagAR</string>
	<string name="savedAccounts">Saved Accounts</string>
	<string name="savedAccountsMessage">Please select one of the email addresses given below in order to login by touching it once only.</string>
	<string name="deleteUserAccount">To remove a user account from the local storage(of the mobile device) touch the desired email address for a few seconds.</string>
	<string name="addANewUserAccount"><u>Login with another user account.</u></string>
	<string name="accuracyOfTag">Accuracy of tag:</string>
	<string name="imageTag">Image of the Tag</string>
	<string name="downloadImages">Allow to download tag images and take pictures?</string>
	<string name="latestNews">Latest News</string>
	<string name="latestNews1">None at the moment.</string>
	<string name="showTips">Show textual tips?</string>
	
	
	
	
</resources>	