<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    >

    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:gravity="center_horizontal" 
    	 >
 
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about"
	        android:textScaleX="1.5"
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="4"
	        />
      
 	   
 	
    	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"/>
    	
    	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designerDeveloper"/>
    
    	
    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/license" />
    
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/website"
	        />
        
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/website1"
	        />
        
         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/appVersion"
	        />
        
        <TextView 
    	    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/copyright1"
	        />
    	
    	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/copyright2"
	        />
         
         
         </LinearLayout>
   
</LinearLayout>