<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="200dp" android:layout_height="210dp">
 
 
 <TextView  android:id="@+id/comment"
	 android:layout_width="wrap_content" 
	 android:layout_height="wrap_content"
	 android:text="@string/comment" 
     />
 
 
 <TextView android:id="@+id/commentTextDialog" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/comment"
     
     />
 
 
 <TextView android:id="@+id/location" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:text="@string/location"
     android:layout_below="@id/commentTextDialog"
     />
 
 <TextView android:id="@+id/locationTextDialog" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/location"
     />
 
  <TextView android:id="@+id/distance" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/locationTextDialog"
     android:text="@string/distance"
     />
  
  <TextView android:id="@+id/distanceTextDialog" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/distance"
     />
  
  <TextView android:id="@+id/accuracy" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/distanceTextDialog"
     android:text="@string/accuracyOfTag"
     />
  
	<TextView android:id="@+id/accuracyTextDialog" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/accuracy"
     />
	
	<ImageView android:id="@+id/imageTag"
	 android:layout_height="wrap_content"
	 android:layout_width="wrap_content"
	 android:layout_below="@id/accuracyTextDialog"
	 android:contentDescription="@string/imageTag" />
  
</RelativeLayout>