<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="200dp" android:layout_height="200dp">
 
 
 <TextView  android:id="@+id/comment"
	 android:layout_width="wrap_content" 
	 android:layout_height="wrap_content"
	 android:text="@string/comment" 
     />
 
 
 <EditText android:id="@+id/commentText" 
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:layout_below="@id/comment"
     android:inputType="text"
     />
 
  
 
 <Button android:id="@+id/submitButton"
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content"
 android:layout_below="@id/commentText"
  android:text="@string/submit" />
 
 <Button android:id="@+id/cancelButton"
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content"
 android:layout_below="@id/commentText"
 android:layout_toRightOf="@id/submitButton"
  android:text="@string/cancel" />
 
</RelativeLayout>