<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical">

    
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:gravity="center_horizontal"
 	    >
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/forgotPassword"
	        android:textScaleX="1.5"
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="4"
	        />
    
 	    </LinearLayout>
    
 	
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    >
    	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/presentPassword"
	        />
    
    	<EditText 
    	    android:id="@+id/presentPassword"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/empty"
    	    android:inputType="textPassword"
    	    />
    	
    </LinearLayout>
 	
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    >
    	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/newPassword"
	        />
    
    	<EditText 
    	    android:id="@+id/newPassword"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/empty"
    	    android:inputType="textPassword"
    	    />
    	
    </LinearLayout>
    
	
 
 	 <LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    >
    
    	<Button 
    	    android:id="@+id/resetButton"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/forgotPassword"
    	    />
    	
    	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="4"
	        />
    	</LinearLayout>
    	
 	 
    	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    >
    
    	    	
    	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="4"
	        />
    	
    	<CheckBox 
    	    android:id="@+id/imageCheck"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
 			android:text="@string/downloadImages" 
 				  />
    	
        	    	    
    </LinearLayout>
    
    	
    	
    	
 	
</LinearLayout>